[package]
name = "woel-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.0"
bevy-sequential-actions = "0.10.0"
bevy_ecs_ldtk = { version = "0.9.0" }
bevy_ecs_tilemap = { git = "https://github.com/rparrett/bevy_ecs_tilemap", branch = "bevy13", features = ["render", "atlas"] }
bevy_rapier2d = { version = "0.25.0", features = ["simd-stable", "serde-serialize", "parallel"] }
bevy_rapier_collider_gen = "0.4.2"
bevy_save = "0.14.0"
bevy_vector_shapes = "0.7.0"
bevy_yarnspinner = "0.2.0"
bevy_yarnspinner_example_dialogue_view = "0.2.1"
big-brain = "0.19.0"
leafwing-input-manager = "0.13.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
strum = "0.26.1"
strum_macros = "0.26.1"
